import { textInputCharacterLimits } from '#appeals/appeal.constants.js';
import {
	appealCaseEnforcementInvalidReasons,
	appealDataEnforcementNotice,
	appellantCaseDataNotValidated,
	appellantCaseIncompleteReasons
} from '#testing/app/fixtures/referencedata.js';
import { createTestEnvironment } from '#testing/index.js';
import { parseHtml } from '@pins/platform';
import nock from 'nock';
import supertest from 'supertest';

const { app, installMockApi } = createTestEnvironment();
const request = supertest(app);
const appealId = appealDataEnforcementNotice.appealId;
const baseUrl = `/appeals-service/appeal-details/${appealId}`;

describe('incomplete-appeal', () => {
	describe('enforcement notice appeal', () => {
		describe('GET /appellant-case/incomplete', () => {
			beforeEach(() => {
				nock('http://test/')
					.get(`/appeals/${appealId}?include=all`)
					.reply(200, appealDataEnforcementNotice)
					.persist();
				nock('http://test/')
					.get(`/appeals/${appealId}/appellant-cases/0`)
					.reply(200, appellantCaseDataNotValidated);
				nock('http://test/')
					.get('/appeals/appellant-case-incomplete-reasons')
					.reply(200, appellantCaseIncompleteReasons);
			});

			afterEach(() => {
				nock.cleanAll();
			});

			it('should render the incomplete reason page and content', async () => {
				const response = await request.get(`${baseUrl}/appellant-case/incomplete`);
				const element = parseHtml(response.text);

				expect(element.innerHTML).toMatchSnapshot();
				expect(element.innerHTML).toContain('Why is the appeal incomplete?</h1>');
				expect(element.innerHTML).toContain('data-module="govuk-checkboxes">');

				// Checkbox content check
				if (!element.textContent) {
					throw new Error('Test setup failed: The main element was not found in the HTML');
				}
				const textContent = element.textContent.replace(/\s+/g, ' ').trim();
				expect(textContent).toContain('Missing documents');
				expect(textContent).toContain('Grounds and facts do not match');
				expect(textContent).toContain('Waiting for appellant to pay the fee');
				expect(textContent).toContain('Other');

				expect(element.innerHTML).toContain('Continue</button>');
			});
		});

		describe('POST /appellant-case/incomplete', () => {
			beforeEach(async () => {
				nock('http://test/')
					.get(`/appeals/${appealId}?include=all`)
					.reply(200, appealDataEnforcementNotice)
					.persist();
				nock('http://test/')
					.get(`/appeals/${appealId}/appellant-cases/0`)
					.reply(200, appellantCaseDataNotValidated);
				nock('http://test/')
					.get('/appeals/appellant-case-incomplete-reasons')
					.reply(200, appellantCaseIncompleteReasons);
			});

			afterEach(() => {
				nock.cleanAll();
			});

			it('should re-render the incomplete reason page with the expected error message if no incomplete reason was provided', async () => {
				const response = await request.post(`${baseUrl}/appellant-case/incomplete`).send({});

				const element = parseHtml(response.text);
				expect(element.innerHTML).toMatchSnapshot();

				const unprettifiedErrorSummaryHtml = parseHtml(response.text, {
					rootElement: '.govuk-error-summary',
					skipPrettyPrint: true
				}).innerHTML;
				expect(unprettifiedErrorSummaryHtml).toContain('There is a problem</h2>');
				expect(unprettifiedErrorSummaryHtml).toContain('Select why the appeal is incomplete</a>');
			});

			it('should re-render the incomplete reason page with the expected error message if "other" incomplete reason was provided but the matching text property is an empty string', async () => {
				const response = await request.post(`${baseUrl}/appellant-case/incomplete`).send({
					incompleteReason: 10,
					['incompleteReason-10']: ''
				});

				const element = parseHtml(response.text);
				expect(element.innerHTML).toMatchSnapshot();

				const unprettifiedErrorSummaryHtml = parseHtml(response.text, {
					rootElement: '.govuk-error-summary',
					skipPrettyPrint: true
				}).innerHTML;
				expect(unprettifiedErrorSummaryHtml).toContain('There is a problem</h2>');
				expect(unprettifiedErrorSummaryHtml).toContain('Enter a reason</a>');
			});

			it('should re-render the incomplete reason page with the expected error message if "other" incomplete reason was provided but the matching text property exceeds the character limit', async () => {
				const response = await request.post(`${baseUrl}/appellant-case/incomplete`).send({
					incompleteReason: 10,
					['incompleteReason-10']: 'a'.repeat(textInputCharacterLimits.checkboxTextItemsLength + 1)
				});

				const element = parseHtml(response.text);
				expect(element.innerHTML).toMatchSnapshot();

				const unprettifiedErrorSummaryHtml = parseHtml(response.text, {
					rootElement: '.govuk-error-summary',
					skipPrettyPrint: true
				}).innerHTML;
				expect(unprettifiedErrorSummaryHtml).toContain('There is a problem</h2>');
				expect(unprettifiedErrorSummaryHtml).toContain(
					`Reason must be ${textInputCharacterLimits.checkboxTextItemsLength} characters or less</a>`
				);
			});

			it('should redirect to the missing documents page if selected', async () => {
				const response = await request.post(`${baseUrl}/appellant-case/incomplete`).send({
					incompleteReason: ['10', '12', '13', '14'],
					['incompleteReason-10']: 'a'
				});

				expect(response.statusCode).toBe(302);
				expect(response.text).toBe(
					`Found. Redirecting to ${baseUrl}/appellant-case/incomplete/missing-documents`
				);
			});

			it('should redirect to the ground and facts do not match page if provided and missing documents is not provided', async () => {
				const response = await request.post(`${baseUrl}/appellant-case/incomplete`).send({
					incompleteReason: ['10', '13', '14'],
					['incompleteReason-10']: 'a'
				});

				expect(response.statusCode).toBe(302);
				expect(response.text).toBe(
					`Found. Redirecting to ${baseUrl}/appellant-case/incomplete/grounds-facts-check`
				);
			});

			it('should redirect to the receipt due date page if provided and neither missing docs or grounds and facts were provided', async () => {
				const response = await request.post(`${baseUrl}/appellant-case/incomplete`).send({
					incompleteReason: ['10', '14'],
					['incompleteReason-10']: 'a'
				});

				expect(response.statusCode).toBe(302);
				expect(response.text).toBe(
					`Found. Redirecting to ${baseUrl}/appellant-case/incomplete/receipt-due-date`
				);
			});

			it('should redirect to the enforcement other information page if only the other information was provided', async () => {
				const response = await request.post(`${baseUrl}/appellant-case/incomplete`).send({
					incompleteReason: '10',
					['incompleteReason-10']: 'a'
				});

				expect(response.statusCode).toBe(302);
				expect(response.text).toBe(
					`Found. Redirecting to ${baseUrl}/appellant-case/incomplete/enforcement-other-information`
				);
			});
		});

		describe('GET /enforcement-notice-reason', () => {
			beforeEach(async () => {
				installMockApi();
				nock('http://test/')
					.get(`/appeals/${appealId}?include=all`)
					.reply(200, appealDataEnforcementNotice)
					.persist();
				nock('http://test/')
					.get(`/appeals/${appealId}/appellant-cases/0`)
					.reply(200, appellantCaseDataNotValidated);
				nock('http://test/')
					.get('/appeals/appellant-case-enforcement-invalid-reasons')
					.reply(200, appealCaseEnforcementInvalidReasons);
			});

			afterEach(() => {
				nock.cleanAll();
			});

			it('should render the enforcement notice reasons page with no reasons selected', async () => {
				const response = await request.get(
					`${baseUrl}/appellant-case/invalid/enforcement-notice-reason`
				);

				const element = parseHtml(response.text);

				expect(element.innerHTML).toMatchSnapshot();

				const unprettifiedElement = parseHtml(response.text, { skipPrettyPrint: true });

				expect(unprettifiedElement.innerHTML).toContain('Appeal 351062</span>');

				expect(unprettifiedElement.innerHTML).toContain(
					'Why is the enforcement notice invalid?</h1>'
				);
				expect(unprettifiedElement.innerHTML).toContain(
					'<div class="govuk-checkboxes__item"><input class="govuk-checkboxes__input" id="invalid-reason" name="invalidReason" type="checkbox" value="1" data-aria-controls="conditional-invalid-reason"><label class="govuk-label govuk-checkboxes__label" for="invalid-reason"> Enforcement invalid reason one</label></div>'
				);
				expect(unprettifiedElement.innerHTML).toContain('Continue</button>');
			});
		});

		describe('POST /enforcement-notice-reason', () => {
			beforeEach(async () => {
				installMockApi();
				nock('http://test/')
					.get(`/appeals/${appealId}?include=all`)
					.reply(200, appealDataEnforcementNotice)
					.persist();
				nock('http://test/')
					.get(`/appeals/${appealId}/appellant-cases/0`)
					.reply(200, appellantCaseDataNotValidated);
				nock('http://test/')
					.get('/appeals/appellant-case-enforcement-invalid-reasons')
					.reply(200, appealCaseEnforcementInvalidReasons);
			});

			afterEach(() => {
				nock.cleanAll();
			});

			it('should re-render the enforcement notice reasons page with the expected error message if no reason was selected', async () => {
				const response = await request
					.post(`${baseUrl}/appellant-case/invalid/enforcement-notice-reason`)
					.send({});

				const element = parseHtml(response.text);
				expect(element.innerHTML).toMatchSnapshot();

				const unprettifiedErrorSummaryHtml = parseHtml(response.text, {
					rootElement: '.govuk-error-summary',
					skipPrettyPrint: true
				}).innerHTML;
				expect(unprettifiedErrorSummaryHtml).toContain('There is a problem</h2>');
				expect(unprettifiedErrorSummaryHtml).toContain(
					'Select why the enforcement notice is invalid</a>'
				);
			});

			it('should re-render the enforcement notice reasons page with the expected error message if reasons were selected, but one has an empty text value', async () => {
				const response = await request
					.post(`${baseUrl}/appellant-case/invalid/enforcement-notice-reason`)
					.send({
						invalidReason: ['1', '2'],
						'invalidReason-1': 'has some text',
						'invalidReason-2': ''
					});

				const element = parseHtml(response.text);
				expect(element.innerHTML).toMatchSnapshot();

				const unprettifiedErrorSummaryHtml = parseHtml(response.text, {
					rootElement: '.govuk-error-summary',
					skipPrettyPrint: true
				}).innerHTML;
				expect(unprettifiedErrorSummaryHtml).toContain('There is a problem</h2>');
				expect(unprettifiedErrorSummaryHtml).toContain('Enter a reason</a>');

				const unprettifiedInvalidReason1 = parseHtml(response.text, {
					rootElement: `#conditional-invalid-reason`,
					skipPrettyPrint: true
				}).innerHTML;

				expect(unprettifiedInvalidReason1).toContain('Enter a reason</label>');
				expect(unprettifiedInvalidReason1).toContain('value="has some text"');
				expect(unprettifiedInvalidReason1).not.toContain('Error:</span> Enter a reason</p>');

				const unprettifiedInvalidReason2 = parseHtml(response.text, {
					rootElement: `#conditional-invalid-reason-2`,
					skipPrettyPrint: true
				}).innerHTML;

				expect(unprettifiedInvalidReason2).toContain('Enter a reason</label>');
				expect(unprettifiedInvalidReason2).toContain('value=""');
				expect(unprettifiedInvalidReason2).toContain('Error:</span> Enter a reason</p>');
			});

			it('should redirect to check details screen on success', async () => {
				// Populate session data
				await request.post(`${baseUrl}/appellant-case`).send({ reviewOutcome: 'invalid' });

				const response = await request
					.post(`${baseUrl}/appellant-case/invalid/enforcement-notice-reason`)
					.send({
						invalidReason: ['1', '2'],
						'invalidReason-1': 'has some text',
						'invalidReason-2': 'has some other text'
					});

				expect(response.statusCode).toBe(302);
				expect(response.text).toBe(
					`Found. Redirecting to /appeals-service/appeal-details/${appealId}/appellant-case/invalid/enforcement-other-information`
				);
			});
		});

		describe('GET /check-details-and-mark-enforcement-as-incomplete', () => {
			beforeEach(async () => {
				nock.cleanAll();
				nock('http://test/')
					.get(`/appeals/${appealId}?include=all`)
					.reply(200, appealDataEnforcementNotice)
					.persist();
				nock('http://test/')
					.get(`/appeals/${appealId}/appellant-cases/0`)
					.reply(200, appellantCaseDataNotValidated)
					.persist();
				nock('http://test/')
					.get('/appeals/appellant-case-enforcement-invalid-reasons')
					.reply(200, appealCaseEnforcementInvalidReasons)
					.persist();

				// Populate session data
				await request.post(`${baseUrl}/appellant-case`).send({ reviewOutcome: 'incomplete' });
				await request
					.post(`${baseUrl}/appellant-case/incomplete/enforcement-notice`)
					.send({ enforcementNoticeInvalid: 'yes' });
				await request.post(`${baseUrl}/appellant-case/incomplete/enforcement-notice-reason`).send({
					invalidReason: ['1', '2', '8'],
					'invalidReason-1': 'has some text',
					'invalidReason-2': 'has some other text',
					'invalidReason-6': 'another reason'
				});
				await request
					.post(`${baseUrl}/appellant-case/incomplete/enforcement-other-information`)
					.send({
						otherInformationValidRadio: 'Yes',
						otherInformationDetails: 'Enforcement other information'
					});
			});

			afterEach(() => {
				nock.cleanAll();
			});

			it('should render the enforcement notice reasons page with no reasons selected', async () => {
				const response = await request.get(
					`${baseUrl}/appellant-case/incomplete/check-details-and-mark-enforcement-as-incomplete`
				);

				const element = parseHtml(response.text);

				expect(element.innerHTML).toMatchSnapshot();

				const unprettifiedElement = parseHtml(response.text, { skipPrettyPrint: true });

				expect(unprettifiedElement.innerHTML).toContain('Appeal 351062</span>');

				expect(unprettifiedElement.innerHTML).toContain(
					'Check details and mark appeal as incomplete</h1>'
				);
				expect(unprettifiedElement.innerHTML).toContain(
					'<dt class="govuk-summary-list__key"> What is the outcome of your review?</dt><dd class="govuk-summary-list__value"> Incomplete</dd>'
				);
				expect(unprettifiedElement.innerHTML).toContain(
					'<dt class="govuk-summary-list__key"> Do you want to add any other information?</dt>'
				);
				expect(unprettifiedElement.innerHTML).toContain(
					'>Yes: Enforcement other information</div></dd>'
				);
				expect(unprettifiedElement.innerHTML).toContain('Mark appeal as incomplete</button>');
			});
		});

		describe('POST /check-details-and-mark-enforcement-as-incomplete', () => {
			beforeEach(async () => {
				nock.cleanAll();
				nock('http://test/')
					.get(`/appeals/${appealId}?include=all`)
					.reply(200, appealDataEnforcementNotice)
					.persist();
				nock('http://test/')
					.get(`/appeals/${appealId}/appellant-cases/0`)
					.reply(200, appellantCaseDataNotValidated)
					.persist();
				nock('http://test/')
					.get('/appeals/appellant-case-enforcement-invalid-reasons')
					.reply(200, appealCaseEnforcementInvalidReasons)
					.persist();

				// Populate session data
				await request.post(`${baseUrl}/appellant-case`).send({ reviewOutcome: 'incomplete' });
				await request
					.post(`${baseUrl}/appellant-case/incomplete/enforcement-notice`)
					.send({ enforcementNoticeInvalid: 'yes' });
				await request.post(`${baseUrl}/appellant-case/incomplete/enforcement-notice-reason`).send({
					invalidReason: ['1', '2', '8'],
					'invalidReason-1': 'has some text',
					'invalidReason-2': 'has some other text',
					'invalidReason-6': 'another reason'
				});
				await request
					.post(`${baseUrl}/appellant-case/incomplete/enforcement-other-information`)
					.send({
						otherInformationValidRadio: 'Yes',
						otherInformationDetails: 'Enforcement other information'
					});
			});

			afterEach(() => {
				nock.cleanAll();
			});

			it('should redirect to case details on success', async () => {
				nock('http://test/')
					.patch(`/appeals/5623/appellant-cases/0`, {
						validationOutcome: 'incomplete',
						enforcementInvalidReasons: [
							{ id: 1, text: ['has some text'] },
							{ id: 2, text: ['has some other text'] },
							{ id: 8, text: [null] }
						],
						enforcementNoticeInvalid: 'yes',
						otherInformation: 'Enforcement other information'
					})
					.reply(200);

				const response = await request.post(
					`${baseUrl}/appellant-case/incomplete/check-details-and-mark-enforcement-as-incomplete`
				);

				expect(response.statusCode).toBe(302);
				expect(response.text).toBe(
					`Found. Redirecting to /appeals-service/appeal-details/${appealId}`
				);
			});
		});
	});
});
