// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`incomplete-appeal enforcement notice appeal GET /appellant-case/incomplete should render the incomplete reason page and content 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                            <h1 class="govuk-fieldset__heading"> Why is the appeal incomplete?</h1>
                        </legend>
                        <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="incomplete-reason" name="incompleteReason"
                                type="checkbox" value="12">
                                <label class="govuk-label govuk-checkboxes__label" for="incomplete-reason">Missing documents</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="incomplete-reason-2" name="incompleteReason"
                                type="checkbox" value="13">
                                <label class="govuk-label govuk-checkboxes__label" for="incomplete-reason-2">Grounds and facts do not match</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="incomplete-reason-3" name="incompleteReason"
                                type="checkbox" value="14">
                                <label class="govuk-label govuk-checkboxes__label" for="incomplete-reason-3">Waiting for appellant to pay the fee</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="incomplete-reason-4" name="incompleteReason"
                                type="checkbox" value="10" data-aria-controls="conditional-incomplete-reason-4">
                                <label class="govuk-label govuk-checkboxes__label" for="incomplete-reason-4">Other</label>
                            </div>
                            <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                            id="conditional-incomplete-reason-4">
                                <div class="pins-add-another" aria-live="polite" data-max-item-count="10">
                                    <div class="pins-add-another__item govuk-!-margin-top-6">
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full flex-row space-between">
                                                <label for="incomplete-reason-10-1" class="govuk-label govuk-!-margin-bottom-4">Which part is incorrect or incomplete?</label>
                                                <div class="pins-add-another__remove-button-container"></div>
                                            </div>
                                        </div>
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full">
                                                <div class="govuk-form-group">
                                                    <input class="govuk-input pins-add-another__item-input govuk-!-margin-0"
                                                    id="incomplete-reason-10-1" name="incompleteReason-10" type="text" value="">
                                                </div>
                                            </div>
                                        </div>
                                    </div>
                                    <button type="button" class="govuk-button pins-add-another__add-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-0"
                                    data-module="govuk-button">Add another</button>
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`incomplete-appeal enforcement notice appeal GET /check-details-and-mark-enforcement-as-incomplete should render the check details page where the enforcement notice is invalid 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and mark appeal as incomplete</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> What is the outcome of your review?</dt>
                    <dd                     class="govuk-summary-list__value">Incomplete</dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/5623/appellant-case">Change<span class="govuk-visually-hidden"> review outcome</span></a>
                        </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Is the enforcement notice invalid?</dt>
                    <dd                     class="govuk-summary-list__value">Yes</dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/5623/appellant-case/incomplete/enforcement-notice">Change<span class="govuk-visually-hidden"> is the enforcement notice incomplete?</span></a>
                        </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Why is the enforcement notice invalid?</dt>
                    <dd                     class="govuk-summary-list__value">
                        <ul class="govuk-list govuk-list--bullet">
                            <div class="pins-show-more" data-label="" data-mode="html" data-max-before-hiding="300"
                            data-toggle-text-collapsed="Show more" data-toggle-text-expanded="Show less">
                                <li>Enforcement invalid reason one: has some text</li>
                            </div>
                            <div class="pins-show-more" data-label="" data-mode="html" data-max-before-hiding="300"
                            data-toggle-text-collapsed="Show more" data-toggle-text-expanded="Show less">
                                <li>Enforcement invalid reason two: has some other text</li>
                            </div>
                            <div class="pins-show-more" data-label="" data-mode="html" data-max-before-hiding="300"
                            data-toggle-text-collapsed="Show more" data-toggle-text-expanded="Show less">
                                <li>Enforcement invalid other reason:</li>
                            </div>
                        </ul>
                        </dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/5623/appellant-case/incomplete/enforcement-notice-reason">Change<span class="govuk-visually-hidden"> why is the enforcement notice incomplete?</span></a>
                        </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Do you want to add any other information?</dt>
                    <dd                     class="govuk-summary-list__value">
                        <div class="pins-show-more" data-label="" data-mode="html" data-max-before-hiding="300"
                        data-toggle-text-collapsed="Show more" data-toggle-text-expanded="Show less">Yes: Enforcement other information</div>
                        </dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/5623/appellant-case/incomplete/enforcement-other-information">Change<span class="govuk-visually-hidden"> do you want to add any other information?</span></a>
                        </dd>
                </div>
            </dl>
            <p class="govuk-body">We will mark the appeal as incomplete and send an email to the relevant
                parties.</p>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate">
                        <button type="submit" class="govuk-button" data-module="govuk-button"
                        id="continue">Mark appeal as incomplete</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`incomplete-appeal enforcement notice appeal GET /check-details-and-mark-enforcement-as-incomplete should render the check details page where the enforcement notice is valid 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and mark appeal as incomplete</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> What is the outcome of your review?</dt>
                    <dd                     class="govuk-summary-list__value">Incomplete</dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/5623/appellant-case">Change<span class="govuk-visually-hidden"> review outcome</span></a>
                        </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Is the enforcement notice invalid?</dt>
                    <dd                     class="govuk-summary-list__value">No</dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/5623/appellant-case/incomplete/enforcement-notice">Change<span class="govuk-visually-hidden"> is the enforcement notice incomplete?</span></a>
                        </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Why is the appeal incomplete?</dt>
                    <dd                     class="govuk-summary-list__value">
                        <ul class="govuk-list govuk-!-margin-top-0 govuk-!-margin-bottom-0 govuk-list--bullet">
                            <li>Other: Some other reason text</li>
                            <li>Missing documents</li>
                            <li>Waiting for appellant to pay the fee</li>
                        </ul>
                        </dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/5623/appellant-case/incomplete">Change<span class="govuk-visually-hidden"> Incomplete reasons</span></a>
                        </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Which documents are incomplete?</dt>
                    <dd                     class="govuk-summary-list__value">
                        <div class="pins-show-more" data-label="" data-mode="html">
                            <ul class="govuk-list govuk-!-margin-top-0 govuk-!-margin-bottom-0 govuk-list--bullet">
                                <li>Grounds of appeal supporting documents: Where is this doc</li>
                                <li>Enforcement notice: Where is this other doc</li>
                            </ul>
                        </div>
                        </dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/5623/appellant-case/incomplete/missing-documents">Change<span class="govuk-visually-hidden"> Incomplete reasons</span></a>
                        </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Ground (a) fee receipt due date</dt>
                    <dd                     class="govuk-summary-list__value">1 May 3000</dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/5623/appellant-case/incomplete/receipt-due-date">Change<span class="govuk-visually-hidden"> Ground (a) fee receipt due date</span></a>
                        </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal due date</dt>
                    <dd class="govuk-summary-list__value">2 July 3000</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/5623/appellant-case/incomplete/date">Change<span class="govuk-visually-hidden"> Appeal due date</span></a>
                    </dd>
                </div>
            </dl>
            <p class="govuk-body">We will mark the appeal as incomplete and send an email to the relevant
                parties.</p>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate">
                        <button type="submit" class="govuk-button" data-module="govuk-button"
                        id="continue">Mark appeal as incomplete</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`incomplete-appeal enforcement notice appeal GET /enforcement-notice-reason should render the enforcement notice reasons page with no reasons selected 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                            <h1 class="govuk-fieldset__heading"> Why is the enforcement notice invalid?</h1>
                        </legend>
                        <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason" name="invalidReason"
                                type="checkbox" value="1" data-aria-controls="conditional-invalid-reason">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason">Enforcement invalid reason one</label>
                            </div>
                            <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                            id="conditional-invalid-reason">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-label--s" for="invalid-reason-1-1">Enter a reason</label>
                                    <input class="govuk-input" id="invalid-reason-1-1"
                                    name="invalidReason-1" type="text">
                                </div>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-2" name="invalidReason"
                                type="checkbox" value="2" data-aria-controls="conditional-invalid-reason-2">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-2">Enforcement invalid reason two</label>
                            </div>
                            <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                            id="conditional-invalid-reason-2">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-label--s" for="invalid-reason-2-1">Enter a reason</label>
                                    <input class="govuk-input" id="invalid-reason-2-1"
                                    name="invalidReason-2" type="text">
                                </div>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-3" name="invalidReason"
                                type="checkbox" value="3" data-aria-controls="conditional-invalid-reason-3">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-3">Enforcement invalid reason three</label>
                            </div>
                            <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                            id="conditional-invalid-reason-3">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-label--s" for="invalid-reason-3-1">Enter a reason</label>
                                    <input class="govuk-input" id="invalid-reason-3-1"
                                    name="invalidReason-3" type="text">
                                </div>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-4" name="invalidReason"
                                type="checkbox" value="8" data-aria-controls="conditional-invalid-reason-4">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-4">Enforcement invalid other reason</label>
                            </div>
                            <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                            id="conditional-invalid-reason-4">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-label--s" for="invalid-reason-8-1">Enter a reason</label>
                                    <input class="govuk-input" id="invalid-reason-8-1"
                                    name="invalidReason-8" type="text">
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`incomplete-appeal enforcement notice appeal GET /missing-documents should render the missing documents page and content 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                            <h1 class="govuk-fieldset__heading"> Which documents are missing?</h1>
                        </legend>
                        <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="missing-documents" name="missingDocuments"
                                type="checkbox" value="1" data-aria-controls="conditional-missing-documents">
                                <label class="govuk-label govuk-checkboxes__label" for="missing-documents">Grounds of appeal supporting documents</label>
                            </div>
                            <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                            id="conditional-missing-documents">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-label--s" for="missing-documents-1-1">Enter more information</label>
                                    <input class="govuk-input" id="missing-documents-1-1"
                                    name="missingDocuments-1" type="text">
                                </div>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="missing-documents-2" name="missingDocuments"
                                type="checkbox" value="2" data-aria-controls="conditional-missing-documents-2">
                                <label class="govuk-label govuk-checkboxes__label" for="missing-documents-2">Enforcement notice</label>
                            </div>
                            <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                            id="conditional-missing-documents-2">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-label--s" for="missing-documents-2-1">Enter more information</label>
                                    <input class="govuk-input" id="missing-documents-2-1"
                                    name="missingDocuments-2" type="text">
                                </div>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="missing-documents-3" name="missingDocuments"
                                type="checkbox" value="3" data-aria-controls="conditional-missing-documents-3">
                                <label class="govuk-label govuk-checkboxes__label" for="missing-documents-3">Agreement to change the description of the development</label>
                            </div>
                            <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                            id="conditional-missing-documents-3">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-label--s" for="missing-documents-3-1">Enter more information</label>
                                    <input class="govuk-input" id="missing-documents-3-1"
                                    name="missingDocuments-3" type="text">
                                </div>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="missing-documents-4" name="missingDocuments"
                                type="checkbox" value="4" data-aria-controls="conditional-missing-documents-4">
                                <label class="govuk-label govuk-checkboxes__label" for="missing-documents-4">Planning obligation</label>
                            </div>
                            <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                            id="conditional-missing-documents-4">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-label--s" for="missing-documents-4-1">Enter more information</label>
                                    <input class="govuk-input" id="missing-documents-4-1"
                                    name="missingDocuments-4" type="text">
                                </div>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="missing-documents-5" name="missingDocuments"
                                type="checkbox" value="5" data-aria-controls="conditional-missing-documents-5">
                                <label class="govuk-label govuk-checkboxes__label" for="missing-documents-5">Application for an award of appeal costs</label>
                            </div>
                            <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                            id="conditional-missing-documents-5">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-label--s" for="missing-documents-5-1">Enter more information</label>
                                    <input class="govuk-input" id="missing-documents-5-1"
                                    name="missingDocuments-5" type="text">
                                </div>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="missing-documents-6" name="missingDocuments"
                                type="checkbox" value="6" data-aria-controls="conditional-missing-documents-6">
                                <label class="govuk-label govuk-checkboxes__label" for="missing-documents-6">Other new supporting documents</label>
                            </div>
                            <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                            id="conditional-missing-documents-6">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-label--s" for="missing-documents-6-1">Enter more information</label>
                                    <input class="govuk-input" id="missing-documents-6-1"
                                    name="missingDocuments-6" type="text">
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`incomplete-appeal enforcement notice appeal GET /receipt-due-date should render the receipt due date page and content 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Ground (a) fee receipt due date</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"></div>
    </div>
    <form method="post" novalidate="novalidate">
        <div class="govuk-form-group">
            <div id="fee-receipt-due-date-hint" class="govuk-hint">
                <div class="govuk-hint">For example, 31 3 2025</div>
            </div>
            <div class="govuk-date-input" id="fee-receipt-due-date">
                <div class="govuk-date-input__item">
                    <div class="govuk-form-group">
                        <label class="govuk-label govuk-date-input__label" for="fee-receipt-due-date-day">Day</label>
                        <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                        id="fee-receipt-due-date-day" name="fee-receipt-due-date-day" type="text"
                        inputmode="numeric">
                    </div>
                </div>
                <div class="govuk-date-input__item">
                    <div class="govuk-form-group">
                        <label class="govuk-label govuk-date-input__label" for="fee-receipt-due-date-month">Month</label>
                        <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                        id="fee-receipt-due-date-month" name="fee-receipt-due-date-month" type="text"
                        inputmode="numeric">
                    </div>
                </div>
                <div class="govuk-date-input__item">
                    <div class="govuk-form-group">
                        <label class="govuk-label govuk-date-input__label" for="fee-receipt-due-date-year">Year</label>
                        <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                        id="fee-receipt-due-date-year" name="fee-receipt-due-date-year" type="text"
                        inputmode="numeric">
                    </div>
                </div>
            </div>
        </div>
        <div class="govuk-button-group">
            <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
        </div>
    </form>
</main>"
`;

exports[`incomplete-appeal enforcement notice appeal POST /appellant-case/incomplete should re-render the incomplete reason page with the expected error message if "other" incomplete reason was provided but the matching text property exceeds the character limit 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#incomplete-reason-10-1">Reason must be 1000 characters or less</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                            <h1 class="govuk-fieldset__heading"> Why is the appeal incomplete?</h1>
                        </legend>
                        <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="incomplete-reason" name="incompleteReason"
                                type="checkbox" value="12">
                                <label class="govuk-label govuk-checkboxes__label" for="incomplete-reason">Missing documents</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="incomplete-reason-2" name="incompleteReason"
                                type="checkbox" value="13">
                                <label class="govuk-label govuk-checkboxes__label" for="incomplete-reason-2">Grounds and facts do not match</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="incomplete-reason-3" name="incompleteReason"
                                type="checkbox" value="14">
                                <label class="govuk-label govuk-checkboxes__label" for="incomplete-reason-3">Waiting for appellant to pay the fee</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="incomplete-reason-4" name="incompleteReason"
                                type="checkbox" value="10" checked data-aria-controls="conditional-incomplete-reason-4">
                                <label class="govuk-label govuk-checkboxes__label" for="incomplete-reason-4">Other</label>
                            </div>
                            <div class="govuk-checkboxes__conditional" id="conditional-incomplete-reason-4">
                                <div class="pins-add-another" aria-live="polite" data-max-item-count="10">
                                    <div class="pins-add-another__item govuk-!-margin-top-6">
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full flex-row space-between">
                                                <label for="incomplete-reason-10-1" class="govuk-label govuk-!-margin-bottom-4">Which part is incorrect or incomplete?</label>
                                                <div class="pins-add-another__remove-button-container"></div>
                                            </div>
                                        </div>
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full">
                                                <div class="govuk-form-group govuk-form-group--error">
                                                    <p id="incomplete-reason-10-1-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Reason must be 1000 characters
                                                        or less</p>
                                                    <input class="govuk-input pins-add-another__item-input govuk-!-margin-0 govuk-input--error"
                                                    id="incomplete-reason-10-1" name="incompleteReason-10" type="text" value="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
                                                    aria-describedby="incomplete-reason-10-1-error">
                                                </div>
                                            </div>
                                        </div>
                                    </div>
                                    <button type="button" class="govuk-button pins-add-another__add-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-0"
                                    data-module="govuk-button">Add another</button>
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`incomplete-appeal enforcement notice appeal POST /appellant-case/incomplete should re-render the incomplete reason page with the expected error message if "other" incomplete reason was provided but the matching text property is an empty string 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#incomplete-reason-10-1">Enter a reason</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                            <h1 class="govuk-fieldset__heading"> Why is the appeal incomplete?</h1>
                        </legend>
                        <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="incomplete-reason" name="incompleteReason"
                                type="checkbox" value="12">
                                <label class="govuk-label govuk-checkboxes__label" for="incomplete-reason">Missing documents</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="incomplete-reason-2" name="incompleteReason"
                                type="checkbox" value="13">
                                <label class="govuk-label govuk-checkboxes__label" for="incomplete-reason-2">Grounds and facts do not match</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="incomplete-reason-3" name="incompleteReason"
                                type="checkbox" value="14">
                                <label class="govuk-label govuk-checkboxes__label" for="incomplete-reason-3">Waiting for appellant to pay the fee</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="incomplete-reason-4" name="incompleteReason"
                                type="checkbox" value="10" checked data-aria-controls="conditional-incomplete-reason-4">
                                <label class="govuk-label govuk-checkboxes__label" for="incomplete-reason-4">Other</label>
                            </div>
                            <div class="govuk-checkboxes__conditional" id="conditional-incomplete-reason-4">
                                <div class="pins-add-another" aria-live="polite" data-max-item-count="10">
                                    <div class="pins-add-another__item govuk-!-margin-top-6">
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full flex-row space-between">
                                                <label for="incomplete-reason-10-1" class="govuk-label govuk-!-margin-bottom-4">Which part is incorrect or incomplete?</label>
                                                <div class="pins-add-another__remove-button-container"></div>
                                            </div>
                                        </div>
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full">
                                                <div class="govuk-form-group govuk-form-group--error">
                                                    <p id="incomplete-reason-10-1-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Enter a reason</p>
                                                    <input                                                     class="govuk-input pins-add-another__item-input govuk-!-margin-0 govuk-input--error"
                                                    id="incomplete-reason-10-1" name="incompleteReason-10" type="text" value=""
                                                    aria-describedby="incomplete-reason-10-1-error">
                                                </div>
                                            </div>
                                        </div>
                                    </div>
                                    <button type="button" class="govuk-button pins-add-another__add-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-0"
                                    data-module="govuk-button">Add another</button>
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`incomplete-appeal enforcement notice appeal POST /appellant-case/incomplete should re-render the incomplete reason page with the expected error message if no incomplete reason was provided 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#incomplete-reason">Select why the appeal is incomplete</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group govuk-form-group--error">
                    <fieldset class="govuk-fieldset" aria-describedby="incomplete-reason-error">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                            <h1 class="govuk-fieldset__heading"> Why is the appeal incomplete?</h1>
                        </legend>
                        <p id="incomplete-reason-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Select why the appeal
                            is incomplete</p>
                        <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="incomplete-reason" name="incompleteReason"
                                type="checkbox" value="12">
                                <label class="govuk-label govuk-checkboxes__label" for="incomplete-reason">Missing documents</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="incomplete-reason-2" name="incompleteReason"
                                type="checkbox" value="13">
                                <label class="govuk-label govuk-checkboxes__label" for="incomplete-reason-2">Grounds and facts do not match</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="incomplete-reason-3" name="incompleteReason"
                                type="checkbox" value="14">
                                <label class="govuk-label govuk-checkboxes__label" for="incomplete-reason-3">Waiting for appellant to pay the fee</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="incomplete-reason-4" name="incompleteReason"
                                type="checkbox" value="10" data-aria-controls="conditional-incomplete-reason-4">
                                <label class="govuk-label govuk-checkboxes__label" for="incomplete-reason-4">Other</label>
                            </div>
                            <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                            id="conditional-incomplete-reason-4">
                                <div class="pins-add-another" aria-live="polite" data-max-item-count="10">
                                    <div class="pins-add-another__item govuk-!-margin-top-6">
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full flex-row space-between">
                                                <label for="incomplete-reason-10-1" class="govuk-label govuk-!-margin-bottom-4">Which part is incorrect or incomplete?</label>
                                                <div class="pins-add-another__remove-button-container"></div>
                                            </div>
                                        </div>
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full">
                                                <div class="govuk-form-group">
                                                    <input class="govuk-input pins-add-another__item-input govuk-!-margin-0"
                                                    id="incomplete-reason-10-1" name="incompleteReason-10" type="text" value="">
                                                </div>
                                            </div>
                                        </div>
                                    </div>
                                    <button type="button" class="govuk-button pins-add-another__add-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-0"
                                    data-module="govuk-button">Add another</button>
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`incomplete-appeal enforcement notice appeal POST /enforcement-notice-reason should re-render the enforcement notice reasons page with the expected error message if no reason was selected 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#invalid-reason">Select why the enforcement notice is invalid</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group govuk-form-group--error">
                    <fieldset class="govuk-fieldset" aria-describedby="invalid-reason-error">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                            <h1 class="govuk-fieldset__heading"> Why is the enforcement notice invalid?</h1>
                        </legend>
                        <p id="invalid-reason-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Select why the enforcement
                            notice is invalid</p>
                        <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason" name="invalidReason"
                                type="checkbox" value="1" data-aria-controls="conditional-invalid-reason">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason">Enforcement invalid reason one</label>
                            </div>
                            <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                            id="conditional-invalid-reason">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-label--s" for="invalid-reason-1-1">Enter a reason</label>
                                    <input class="govuk-input" id="invalid-reason-1-1"
                                    name="invalidReason-1" type="text">
                                </div>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-2" name="invalidReason"
                                type="checkbox" value="2" data-aria-controls="conditional-invalid-reason-2">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-2">Enforcement invalid reason two</label>
                            </div>
                            <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                            id="conditional-invalid-reason-2">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-label--s" for="invalid-reason-2-1">Enter a reason</label>
                                    <input class="govuk-input" id="invalid-reason-2-1"
                                    name="invalidReason-2" type="text">
                                </div>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-3" name="invalidReason"
                                type="checkbox" value="3" data-aria-controls="conditional-invalid-reason-3">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-3">Enforcement invalid reason three</label>
                            </div>
                            <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                            id="conditional-invalid-reason-3">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-label--s" for="invalid-reason-3-1">Enter a reason</label>
                                    <input class="govuk-input" id="invalid-reason-3-1"
                                    name="invalidReason-3" type="text">
                                </div>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-4" name="invalidReason"
                                type="checkbox" value="8" data-aria-controls="conditional-invalid-reason-4">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-4">Enforcement invalid other reason</label>
                            </div>
                            <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                            id="conditional-invalid-reason-4">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-label--s" for="invalid-reason-8-1">Enter a reason</label>
                                    <input class="govuk-input" id="invalid-reason-8-1"
                                    name="invalidReason-8" type="text">
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`incomplete-appeal enforcement notice appeal POST /enforcement-notice-reason should re-render the enforcement notice reasons page with the expected error message if reasons were selected, but one has an empty text value 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#invalid-reason-2-1">Enter a reason</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                            <h1 class="govuk-fieldset__heading"> Why is the enforcement notice invalid?</h1>
                        </legend>
                        <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason" name="invalidReason"
                                type="checkbox" value="1" checked data-aria-controls="conditional-invalid-reason">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason">Enforcement invalid reason one</label>
                            </div>
                            <div class="govuk-checkboxes__conditional" id="conditional-invalid-reason">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-label--s" for="invalid-reason-1-1">Enter a reason</label>
                                    <input class="govuk-input" id="invalid-reason-1-1"
                                    name="invalidReason-1" type="text" value="has some text">
                                </div>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-2" name="invalidReason"
                                type="checkbox" value="2" checked data-aria-controls="conditional-invalid-reason-2">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-2">Enforcement invalid reason two</label>
                            </div>
                            <div class="govuk-checkboxes__conditional" id="conditional-invalid-reason-2">
                                <div class="govuk-form-group govuk-form-group--error">
                                    <label class="govuk-label govuk-label--s" for="invalid-reason-2-1">Enter a reason</label>
                                    <p id="invalid-reason-2-1-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Enter a reason</p>
                                    <input                                     class="govuk-input govuk-input--error" id="invalid-reason-2-1" name="invalidReason-2"
                                    type="text" value="" aria-describedby="invalid-reason-2-1-error">
                                </div>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-3" name="invalidReason"
                                type="checkbox" value="3" data-aria-controls="conditional-invalid-reason-3">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-3">Enforcement invalid reason three</label>
                            </div>
                            <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                            id="conditional-invalid-reason-3">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-label--s" for="invalid-reason-3-1">Enter a reason</label>
                                    <input class="govuk-input" id="invalid-reason-3-1"
                                    name="invalidReason-3" type="text">
                                </div>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="invalid-reason-4" name="invalidReason"
                                type="checkbox" value="8" data-aria-controls="conditional-invalid-reason-4">
                                <label class="govuk-label govuk-checkboxes__label" for="invalid-reason-4">Enforcement invalid other reason</label>
                            </div>
                            <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                            id="conditional-invalid-reason-4">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-label--s" for="invalid-reason-8-1">Enter a reason</label>
                                    <input class="govuk-input" id="invalid-reason-8-1"
                                    name="invalidReason-8" type="text">
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;
